--- a/HW8/FrontEnd/package.json
+++ b/HW8/FrontEnd/package.json
@@ -34,6 +34,8 @@
     "@angular-devkit/build-angular": "~12.2.11",
     "@angular/cli": "~12.2.11",
     "@angular/compiler-cli": "~12.2.0",
+    "@fortawesome/angular-fontawesome": "^0.10.0",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@types/google.maps": "^3.46.0",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.8.0",
