--- a/WeatherApp/build.gradle
+++ b/WeatherApp/build.gradle
@@ -3,12 +3,15 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        flatDir{
+            dirs 'libs'
+        }
+        maven {
+            url "https://highsoft.bintray.com/Highcharts"
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
